--- a/style.css
+++ b/style.css
@@ -1,119 +1,130 @@
 /* -------  General Styles ------- */
 
 body {
-  font-family: "Lato", sans-serif;
+    font-family: 'Lato', sans-serif;
 }
 
 h2 {
-  font-size: 26px;
-  font-weight: 400;
-  margin: 0 10px 10px 10px;
-  text-align: center;
+    font-size: 26px;
+    font-weight: 400;
+    margin: 0 10px 10px 10px;
+    text-align: center;
 }
 
 h3 {
-  font-size: 18px;
-  font-weight: 500;
+    font-size: 18px;
+    font-weight: 500;
 }
 
 p {
-  line-height: 1.5em;
-  margin: 0;
+    line-height: 1.5em;
+    margin: 0;
 }
 
 section {
-  padding: 20px;
+    padding: 20px;
 }
 
 section.alternate-background {
-  background-color: #00a699;
-  color: #fff;
+    background-color: #00a699;
+    color: #fff;
 }
 
 main img {
-  width: 100px;
+    width: 100px;
 }
 
 /* ---  Groups & Items --- */
 
 .group {
-  display: flex;
-  flex-direction: column;
+    display: flex;
+    flex-direction: column;
 }
 
 .item {
-  flex: 1;
-  margin: 10px;
+    flex: 1;
+    margin: 10px;
 }
 
 .item-double {
-  flex: 2;
+    flex: 2;
 }
 
 /* -------  Navigation ------- */
 
 header {
-  background-color: #ff385c;
-  padding: 20px 20px 0 20px;
-  text-align: center;
+    background-color: #ff385c;
+    padding: 20px 20px 0 20px;
+    text-align: center;
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
 }
 
 .logo {
-  font-family: "Pangolin", cursive;
-  font-size: 72px;
-  color: #fff;
+    font-family: 'Pangolin', cursive;
+    font-size: 72px;
+    color: #fff;
+}
+
+header nav {
+    display: flex;
+    justify-content: center;
+}
+header nav ul {
+    display: flex;
+    justify-content: center;
 }
 
 header nav ul li {
-  list-style-type: none;
+    list-style-type: none;
 }
-
 header nav ul li a {
-  color: #fff;
-  text-decoration: none;
-  padding: 0 20px 0 0;
+    color: #fff;
+    text-decoration: none;
+    padding: 0 20px 0 0;
 }
 
 header nav ul li a:hover {
-  color: #bdbdbd;
-  text-decoration: none;
+    color: #bdbdbd;
+    text-decoration: none;
 }
 
 /* -------  Search Form ------- */
 form {
-  border: 2px solid #ff385c;
-  padding: 10px;
+    border: 2px solid #ff385c;
+    padding: 10px;
 }
 
 form label {
-  font-weight: bold;
+    font-weight: bold;
 }
 
 form select,
 form input {
-  margin-bottom: 20px;
-  width: 180px;
+    margin-bottom: 20px;
+    width: 180px;
 }
 
 form button {
-  background-color: #ff385c;
-  border: none;
-  color: #fff;
-  font-size: 24px;
-  padding: 15px;
-  width: 100%;
+    background-color: #ff385c;
+    border: none;
+    color: #fff;
+    font-size: 24px;
+    padding: 15px;
+    width: 100%;
 }
 
 /* -------  Footer ------- */
 
 footer {
-  background-color: #ff385c;
+    background-color: #ff385c;
 }
 
 footer p {
-  color: #fff;
-  text-align: center;
-  padding: 20px;
+    color: #fff;
+    text-align: center;
+    padding: 20px;
 }
 
 /* -------  Media Query ------- */
