added styling to form elements

--- a/style.css
+++ b/style.css
@@ -94,6 +94,8 @@ header nav ul li a:hover {
 form {
     border: 2px solid #ff385c;
     padding: 10px;
+    display: flex;
+    justify-content: space-between;
 }
 
 form label {
@@ -113,6 +115,16 @@ form button {
     font-size: 24px;
     padding: 15px;
     width: 100%;
+}
+
+form .group {
+    justify-content: center;
+    width: 100%;
+}
+
+form .item {
+    display: flex;
+    justify-content: space-between;
 }
 
 /* -------  Footer ------- */
