made some changes to css

--- a/style.css
+++ b/style.css
@@ -158,6 +158,7 @@ footer p {
         display: flex;
         justify-content: center;
         align-items: center;
+        gap: 10px;
     }
 
     form button {
@@ -166,7 +167,8 @@ footer p {
         color: #fff;
         font-size: 15px;
         padding: 10px 20px;
-        width: 100%;
+        width: 100;
+        margin-left: 10px;
     }
 
     form select,
@@ -178,6 +180,7 @@ footer p {
         display: flex;
         flex-direction: row;
         align-items: center;
+        gap: 10px;
     }
 
     .item {
